[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/car_mesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/store.gd" type="Script" id=2]
[ext_resource path="res://ui/base_theme.tres" type="Theme" id=3]
[ext_resource path="res://material/black_shiny.tres" type="Material" id=4]
[ext_resource path="res://textures/coin_icon.png" type="Texture" id=5]
[ext_resource path="res://material/menu_bg.tres" type="Material" id=6]

[sub_resource type="Animation" id=1]
resource_name = "spin"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("car_mesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.00179e-05, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="CylinderMesh" id=2]
top_radius = 2.5
bottom_radius = 3.0
height = 0.1

[sub_resource type="PlaneMesh" id=4]

[node name="spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 10.0
theme = ExtResource( 3 )

[node name="button_prev" type="Button" parent="control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -21.1255
margin_right = 73.3241
margin_bottom = 21.1255
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_next" type="Button" parent="control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -101.792
margin_top = -24.1221
margin_right = -28.4678
margin_bottom = 18.1289
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_buy" type="Button" parent="control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -77.0
margin_top = -68.0
margin_right = 38.0
margin_bottom = -25.749
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_rect" type="TextureRect" parent="control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 10.0
margin_right = -42.0
margin_bottom = 45.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins_label" type="Label" parent="control/texture_rect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.0946
margin_top = 9.53515
margin_right = 32.9054
margin_bottom = 35.5351
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_rect_2" type="TextureRect" parent="control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -554.675
margin_top = 435.494
margin_right = -509.675
margin_bottom = 480.494
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car_price_label" type="Label" parent="control/texture_rect_2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.5913
margin_top = -36.6818
margin_right = 29.4087
margin_bottom = -1.68179
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_back_to_menu" type="Button" parent="control"]
margin_right = 58.0
margin_bottom = 49.0
text = "< Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.983873, 0.178871, 0, -0.178871, 0.983873, 0, 1.386, 4.733 )

[node name="car_mesh" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.84274, 0, 0.53832, 0, 1, 0, -0.53832, 0, -0.84274, 0, 0.0536389, 0 )

[node name="animation_player" type="AnimationPlayer" parent="."]
autoplay = "spin"
anims/spin = SubResource( 1 )

[node name="directional_light" type="DirectionalLight" parent="."]
transform = Transform( 0.938626, 2.98023e-08, -0.344938, 0.234462, 0.733469, 0.638005, 0.253001, -0.679723, 0.688453, 0, 1.73919, 0 )

[node name="directional_light_2" type="DirectionalLight" parent="."]
transform = Transform( 0.803088, 0.0547502, 0.59334, -0.40502, 0.780523, 0.476174, -0.437045, -0.622724, 0.649004, -1.03828, 1.47983, -0.279863 )

[node name="store_level" type="Spatial" parent="."]

[node name="mesh_instance" type="MeshInstance" parent="store_level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.240017, 0 )
material_override = ExtResource( 4 )
mesh = SubResource( 2 )
material/0 = null

[node name="mesh_instance_2" type="MeshInstance" parent="store_level"]
transform = Transform( 21.806, 0, 0, 0, 0.692559, -6.75266, 0, 0.721361, 6.48304, 0, 2.956, -6.565 )
material_override = ExtResource( 6 )
mesh = SubResource( 4 )
material/0 = null

[connection signal="pressed" from="control/button_prev" to="." method="_on_button_prev_pressed"]
[connection signal="pressed" from="control/button_next" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="control/button_buy" to="." method="_on_button_buy_pressed"]
[connection signal="pressed" from="control/button_back_to_menu" to="." method="_on_button_back_to_menu_pressed"]
